--- a/index.html
+++ b/index.html
@@ -3,13 +3,83 @@
 
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Online Store</title>
+    <link rel="stylesheet" href="./styles/index.css">
+    <link rel="short icon" href="assets/imagenesClases/icon_pequeño.ico">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
-<body>
-    
-</body>
-</html>
 
+<body>
+    <header>
+        <!-- Diseño de encabezado = menú-->
+        <nav>
+            <ul>
+                <li><a href="#">Sección 1</a></li>
+                <li><a href="#">Sección 2</a></li>
+                <li><a href="./index.html">
+                        <img src="./assets/imagenesClases/logo.jpg" alt="logo-libreria">
+                    </a></li>
+                <li><a href="#">Sección 3</a></li>
+                <li><a href="#">Sección 4</a></li>
+            </ul>
+        </nav>
+        <section>
+            <img src="./assets/imagenesClases/banner.jpg" alt="Banner-libros">
+        </section>
+    </header>
+    <main>
+        <!-- Contenido de la pagina-->
+        <section>
+            <H2>Subtitulo</H2>
+            <div>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/rb7liTdK1VQ?si=J70HHa5P3-c4kxku"
+                    title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; 
+                gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin"
+                    allowfullscreen></iframe>
+                <p>¡Bienvenido a nuestra página web de libros! Sumérgete en un mundo lleno de aventuras, conocimiento y                   emociones a través de nuestras páginas. Desde los clásicos intemporales
+                    hasta las últimas novedades, estamos aquí para guiarte en tu búsqueda de la próxima gran historia.
+                    Explora nuestro extenso catálogo, descubre recomendaciones personalizadas y únete
+                    a una comunidad apasionada de lectores ávidos. ¡Prepárate para abrir un libro y dejar que te
+                    transporte a lugares nunca antes imaginados!</p>
+            </div>
+        </section>
+        <section>
+            <h2>Subtitulo e Imagenes</h2>
+            <div>
+                <img src="./assets/imagenesClases/img.jpg" alt="imagen-LibrosVarios">
+                <img src="./assets/imagenesClases/img.jpg" alt="imagen-LibrosVarios">
+                <img src="./assets/imagenesClases/img.jpg" alt="imagen-LibrosVarios">
+                <img src="./assets/imagenesClases/img.jpg" alt="imagen-LibrosVarios">
+                <img src="./assets/imagenesClases/img.jpg" alt="imagen-LibrosVarios">
+                <img src="./assets/imagenesClases/img.jpg" alt="imagen-LibrosVarios">
+            </div>
+        </section>
+    </main>
+    <Footer>
+        <div>
+            <h3>Contactenos</h3>
+            <ol>
+                <li>Telefono: 333 333 3333</li>
+                <li>Correo: Angello@gmail.com</li>
+                <li>@AngelloIg</li>
+            </ol>
+        </div>
+        <div>
+            <img src="./assets/imagenesClases/logo.jpg" alt="libreriaLibros">
+        </div>
+        <article> 
+           <h3>Tambien puedes visitarnos en:</h3>
+            <div>            
+                <a href="https://es-la.facebook.com/"><i class="bi bi-facebook"></i></a>
+                <a href="https://web.whatsapp.com/"><i class="bi bi-whatsapp"></i></a>
+                <a href="https://www.instagram.com/"><i class="bi bi-instagram"></i></a>
+            </div>
+        </article>
+    </Footer>
+</body>
+
+</html>
