--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
 <body>
     <header>
         <!-- Diseño de encabezado = menú-->
-        <nav>
-            <ul>
+        <nav class="navMenu">
+            <ul class="menuLista">
                 <li><a href="#">Sección 1</a></li>
                 <li><a href="#">Sección 2</a></li>
                 <li><a href="./index.html">
-                        <img src="./assets/imagenesClases/logo.jpg" alt="logo-libreria">
+                        <img class="imgNav" src="./assets/imagenesClases/logo.jpg" alt="logo-libreria">
                     </a></li>
                 <li><a href="#">Sección 3</a></li>
                 <li><a href="#">Sección 4</a></li>
@@ -55,7 +55,7 @@
                 <img src="./assets/imagenesClases/img.jpg" alt="imagen-LibrosVarios">
                 <img src="./assets/imagenesClases/img.jpg" alt="imagen-LibrosVarios">
                 <img src="./assets/imagenesClases/img.jpg" alt="imagen-LibrosVarios">
-                <img src="./assets/imagenesClases/img.jpg" alt="imagen-LibrosVarios">
+                <img  src="./assets/imagenesClases/img.jpg" alt="imagen-LibrosVarios">
             </div>
         </section>
     </main>
