--- a/actividadClase2/index.html
+++ b/actividadClase2/index.html
@@ -31,13 +31,18 @@
 
     <main>
         <section class="contenedor-principal">
-            <h1>Proyecto: Tomemos Conciencia</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-            <div class="imagen img1"> <img src="./assets/images/img1.png" alt=""></div>
-            <div class="imagen img2"><img src="./assets/images/img2.png" alt=""></div>
-            <div class="imagen img3"><img src="./assets/images/img3.png" alt=""></div>
-            <div class="imagen img4"><img src="./assets/images/img4.png" alt=""></div>
-            <div class="imagen img5"><img src="./assets/images/img5.png" alt=""></div>
+            <article class="contenedor-iamgenes">
+                <h1>Proyecto: Tomemos Conciencia</h1>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
+                    Deleniti dolorem at doloremque corrupti aperiam molestias, 
+                    vero alias velit asperiores ut, doloribus nostrum ad incidunt
+                    perferendis quam maiores eveniet impedit animi?</p>
+                <div class="imagen img1"> <img src="./assets/images/img1.png" alt=""></div>
+                <div class="imagen img2"><img src="./assets/images/img2.png" alt=""></div>
+                <div class="imagen img3"><img src="./assets/images/img3.png" alt=""></div>
+                <div class="imagen img4"><img src="./assets/images/img4.png" alt=""></div>
+                <div class="imagen img5"><img src="./assets/images/img5.png" alt=""></div>
+            </article>
         </section>
         <section class="contenedorFlex">
             <div class="flex-hijo">caja 1</div>
