--- a/actividadClase2/index.html
+++ b/actividadClase2/index.html
@@ -15,42 +15,50 @@
         <nav class="menuNav">
             <div class="logo">
                 <a href="#">
-                <img src="./assets/logo/logo.jpg" alt="logoLoros">
+                <img class="img-logo" src="./assets/logo/logo.jpg" alt="logoLoros">
                 <p class="p-logo">Looking for <span class="span-logo">freedom</span></p>
                 </a>
             </div>
-            <ul>
-                <li> <a href="#">Inicios</a></li>
+            <ul class="listaMenu"> 
+                <li><a href="#">Inicio</a></li>
                 <li><a href="#">Proyectos</a></li>
                 <li><a href="#">Sobre nosotros</a></li>
                 <li><a href="#">Aliados</a></li>
-                <li><a href="#">Contactenos</a></li>
+                <li><a  class="contacto" href="#">Contactenos</a></li>
             </ul>
         </nav>
     </header>
 
     <main>
         <section class="contenedor-principal">
-            <article class="contenedor-iamgenes">
+
                 <h1>Proyecto: Tomemos Conciencia</h1>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
-                    Deleniti dolorem at doloremque corrupti aperiam molestias, 
-                    vero alias velit asperiores ut, doloribus nostrum ad incidunt
-                    perferendis quam maiores eveniet impedit animi?</p>
-                <div class="imagen img1"> <img src="./assets/images/img1.png" alt=""></div>
-                <div class="imagen img2"><img src="./assets/images/img2.png" alt=""></div>
-                <div class="imagen img3"><img src="./assets/images/img3.png" alt=""></div>
-                <div class="imagen img4"><img src="./assets/images/img4.png" alt=""></div>
-                <div class="imagen img5"><img src="./assets/images/img5.png" alt=""></div>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+            <article class="contenedor-imagenes">
+                <div class="iamgenes img1">
+                    <div class="imagen img1"> <img src="./assets/images/img1.png" alt=""></div>
+                    <div class="imagen img2"> 
+                        <p>
+                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
+                            Natus omnis adipisci, quaerat, dicta aspernatur, assumenda 
+                            sit illum velit perferendis voluptatem nostrum. Itaque sunt 
+                            tempora voluptates laudantium minus fugit fugiat. Cum!
+                        </p>    <img src="./assets/images/img2.png" alt=""></div>
+                    <div class="imagen img3"><img src="./assets/images/img3.png" alt=""></div>
+                    <div class="imagen img4"><img src="./assets/images/img4.png" alt=""></div>
+                    <div class="imagen img5"><img src="./assets/images/img5.png" alt=""></div>
+                </div>
             </article>
         </section>
-        <section class="contenedorFlex">
+
+        <!-- <section class="contenedorFlex">
             <div class="flex-hijo">caja 1</div>
             <div class="flex-hijo">caja 2</div>
             <div class="flex-hijo">caja 3</div>
             <div class="flex-hijo">caja 4</div>
             <div class="flex-hijo">caja 5</div>
-        </section>
+        </section> -->
+
     </main>
     <footer>Practica de clases 2, posicion flexbox - gip </footer>
 </body>
