--- a/actividadClase2/index.html
+++ b/actividadClase2/index.html
@@ -31,24 +31,51 @@
 
     <main>
         <section class="contenedor-principal">
-
                 <h1>Proyecto: Tomemos Conciencia</h1>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
-            <article class="contenedor-imagenes">
-                <div class="iamgenes img1">
-                    <div class="imagen img1"> <img src="./assets/images/img1.png" alt=""></div>
-                    <div class="imagen img2"> 
-                        <p>
-                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
-                            Natus omnis adipisci, quaerat, dicta aspernatur, assumenda 
-                            sit illum velit perferendis voluptatem nostrum. Itaque sunt 
-                            tempora voluptates laudantium minus fugit fugiat. Cum!
-                        </p>    <img src="./assets/images/img2.png" alt=""></div>
-                    <div class="imagen img3"><img src="./assets/images/img3.png" alt=""></div>
-                    <div class="imagen img4"><img src="./assets/images/img4.png" alt=""></div>
-                    <div class="imagen img5"><img src="./assets/images/img5.png" alt=""></div>
-                </div>
-            </article>
+                <article class="contenedorImagenes">
+                    <div class="imagenes img1">
+                        <img src="./assets/images/img1.png" alt="img-proyecto">
+                        <div class="parrafo-img">
+                            <!-- <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nobis officiis eos nesciunt laborum
+                                qui laudantium pariatur provident nisi mollitia vero. Alias, excepturi iusto quibusdam
+                                consectetur voluptatum esse suscipit ut itaque.</p> -->
+                        </div>
+                    </div>
+    
+                    <div class="imagenes img2">
+                        <img src="./assets/images/img2.png" alt="img-proyecto">
+                        <div class="parrafo-img">
+                            <!-- <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nobis officiis eos nesciunt laborum
+                                qui laudantium pariatur provident nisi mollitia vero. Alias, excepturi iusto quibusdam
+                                consectetur voluptatum esse suscipit ut itaque.</p> -->
+                        </div>
+                    </div>
+                    <div class="imagenes img3">
+                        <img src="./assets/images/img3.png" alt="img-proyecto">
+                        <div class="parrafo-img">
+                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nobis officiis eos nesciunt laborum
+                                qui laudantium pariatur provident nisi mollitia vero. Alias, excepturi iusto quibusdam
+                                consectetur voluptatum esse suscipit ut itaque.</p>
+                        </div>
+                    </div>
+                    <div class="imagenes img4">
+                        <img src="./assets/images/img4.png" alt="img-proyecto">
+                        <div class="parrafo-img">
+                            <!-- <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nobis officiis eos nesciunt laborum
+                                qui laudantium pariatur provident nisi mollitia vero. Alias, excepturi iusto quibusdam
+                                consectetur voluptatum esse suscipit ut itaque.</p> -->
+                        </div>
+                    </div>
+                    <div class="imagenes img5">
+                        <img src="./assets/images/img7.png" alt="img-proyecto">
+                        <div class="parrafo-img">
+                            <!-- <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nobis officiis eos nesciunt laborum
+                                qui laudantium pariatur provident nisi mollitia vero. Alias, excepturi iusto quibusdam
+                                consectetur voluptatum esse suscipit ut itaque.</p> -->
+                        </div>
+                    </div>
+                </article>
         </section>
 
         <!-- <section class="contenedorFlex">
