--- a/actividadClase2/index.html
+++ b/actividadClase2/index.html
@@ -37,18 +37,18 @@
                     <div class="imagenes img1">
                         <img src="./assets/images/img1.png" alt="img-proyecto">
                         <div class="parrafo-img">
-                            <!-- <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nobis officiis eos nesciunt laborum
+                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nobis officiis eos nesciunt laborum
                                 qui laudantium pariatur provident nisi mollitia vero. Alias, excepturi iusto quibusdam
-                                consectetur voluptatum esse suscipit ut itaque.</p> -->
+                                consectetur voluptatum esse suscipit ut itaque.</p>
                         </div>
                     </div>
     
                     <div class="imagenes img2">
                         <img src="./assets/images/img2.png" alt="img-proyecto">
                         <div class="parrafo-img">
-                            <!-- <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nobis officiis eos nesciunt laborum
+                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nobis officiis eos nesciunt laborum
                                 qui laudantium pariatur provident nisi mollitia vero. Alias, excepturi iusto quibusdam
-                                consectetur voluptatum esse suscipit ut itaque.</p> -->
+                                consectetur voluptatum esse suscipit ut itaque.</p>
                         </div>
                     </div>
                     <div class="imagenes img3">
@@ -62,17 +62,17 @@
                     <div class="imagenes img4">
                         <img src="./assets/images/img4.png" alt="img-proyecto">
                         <div class="parrafo-img">
-                            <!-- <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nobis officiis eos nesciunt laborum
+                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nobis officiis eos nesciunt laborum
                                 qui laudantium pariatur provident nisi mollitia vero. Alias, excepturi iusto quibusdam
-                                consectetur voluptatum esse suscipit ut itaque.</p> -->
+                                consectetur voluptatum esse suscipit ut itaque.</p>
                         </div>
                     </div>
                     <div class="imagenes img5">
                         <img src="./assets/images/img7.png" alt="img-proyecto">
                         <div class="parrafo-img">
-                            <!-- <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nobis officiis eos nesciunt laborum
+                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nobis officiis eos nesciunt laborum
                                 qui laudantium pariatur provident nisi mollitia vero. Alias, excepturi iusto quibusdam
-                                consectetur voluptatum esse suscipit ut itaque.</p> -->
+                                consectetur voluptatum esse suscipit ut itaque.</p>
                         </div>
                     </div>
                 </article>
