--- a/actividadesClase/actividadClase3/index.html
+++ b/actividadesClase/actividadClase3/index.html
@@ -33,7 +33,14 @@
     </header>
     <!-- main inicio de contenido-->
     <main>
-
+        <section class="contenido">
+            <h2 class="tituloSecundario">No compres, ¡ Rescata !</h2>
+            <article class="imgParrafo">
+                <img src="./assest/slaider2.jpg" alt="Rescata">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas, velit!</p>
+            </article>
+        </section>
+        
     </main>
     <!-- footer pie de pagina -->
     <footer>
