--- a/actividadesClase/actividadClase6/index.html
+++ b/actividadesClase/actividadClase6/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- <script src="./scripts/ejercicio1.js" defer></script> -->
-    <script src="./scripts/ejercicio2.js" defer></script>
+    <!-- <script src="./scripts/ejercicio2.js" defer></script> -->
+    <script src="./scripts/ejercicio3.js" async></script>
     <title>Practica | JavaScripts</title>
 
 </head>
